総合安定化修正（交通・日時・UI・都市追加）

--- a/index.html
+++ b/index.html
@@ -78,6 +78,19 @@
           </div>
         </div>
         <div class="form-row">
+          <label class="field-label" for="time-select">出発時刻</label>
+          <select id="time-select" class="form-input">
+            <option value="06:00">06:00</option>
+            <option value="08:00">08:00</option>
+            <option value="10:00" selected>10:00</option>
+            <option value="12:00">12:00</option>
+            <option value="14:00">14:00</option>
+            <option value="16:00">16:00</option>
+            <option value="18:00">18:00</option>
+            <option value="20:00">20:00</option>
+          </select>
+        </div>
+        <div class="form-row">
           <label class="field-label" for="stay-select">滞在タイプ</label>
           <select id="stay-select" class="form-input">
             <option value="daytrip">日帰り</option>
