--- a/index.html
+++ b/index.html
@@ -56,8 +56,11 @@
             <option value="東京">東京</option>
             <option value="大阪">大阪</option>
             <option value="名古屋">名古屋</option>
+            <option value="福岡">福岡</option>
             <option value="札幌">札幌</option>
-            <option value="博多">福岡（博多）</option>
+            <option value="仙台">仙台</option>
+            <option value="広島">広島</option>
+            <option value="高松">高松</option>
           </select>
         </div>
         <div class="form-row">
@@ -115,7 +118,23 @@
     <!-- プランブロック -->
     <div id="plan"></div>
 
+    <!-- このサイトについて -->
+    <section class="about-section">
+      <h2 class="about-title">このサイトについて</h2>
+      <p class="about-text">「どこ行こ？」は、次の旅先を見つけるための情報サイトです。交通・宿泊リンクは各社の公式サイトに遷移します。料金・時刻は変動する場合があります。必ず公式情報をご確認ください。当サイトでは楽天アフィリエイトプログラムを使用しています。</p>
+    </section>
+
   </main>
+
+  <footer class="site-footer">
+    <div class="footer-inner">
+      <p class="footer-copy">© 2025 どこ行こ？</p>
+      <nav class="footer-nav">
+        <a href="privacy.html">プライバシーポリシー</a>
+        <a href="terms.html">免責事項</a>
+      </nav>
+    </div>
+  </footer>
 
   <script type="module" src="app.js"></script>
 </body>
